# browser-cluster

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
admin/: package-lock.json  package.json  vite.config.js
admin/src/: App.vue  main.js
admin/src/api/: index.js
admin/src/i18n/: index.js
admin/src/i18n/locales/: en.json  ja.json  zh-CN.json  zh-TW.json
admin/src/router/: index.js
admin/src/stores/: auth.js
admin/src/views/: Configs.vue  Home.vue  LLMModels.vue  Nodes.vue  Profile.vue  PromptTemplates.vue  Proxies.vue  SkillBundles.vue  Skills.vue  Stats.vue  Tasks.vue  Users.vue
app/: main.py
app/api/: auth.py  backup.py  llm.py  prompt_template.py  proxies.py  scrape.py  skill_bundles.py  skills.py  tasks.py  users.py
app/core/: config.py  scraper.py  skills.py
app/db/: mongo.py  sqlite.py
app/models/: llm.py  prompt_template.py  proxy.py  skill.py  skill_bundle.py  task.py  user.py
app/services/: cache_service.py  llm_agent.py  skill_bundle_service.py  skill_service.py  worker.py
scripts/: init_admin.py  init_skills.py
tests/: test_coordinates_skill.py  test_live_map_extraction.py  test_visual_extraction.py
