[project]
name = "browser-cluster"
version = "1.0.0"
description = "Playwright-based distributed browser cluster"
authors = [
    { name = "Your Name" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # 核心框架
    "fastapi>=0.123.5",
    "uvicorn[standard]>=0.38.0",
    # 数据验证与配置
    "pydantic>=2.11.7",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.1.1",
    # 浏览器自动化与抓取
    "playwright>=1.57.0",
    "playwright-stealth>=2.0.1",
    # 数据库驱动
    "pymongo>=4.15.5",
    "redis>=7.1.0",
    "pika>=1.3.2",
    # 网络请求与 API
    "httpx>=0.28.1",
    "requests>=2.32.5",
    "python-multipart>=0.0.20",
    # 安全与加密
    "python-jose>=3.5.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
    "cryptography>=46.0.3",
    # 其他工具
    "motor>=3.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
]
